<!--
  Copyright 2014 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">Comic Covers</string>
    <string name="source_name">Comic Covers</string>
    <string name="source_description">Random comic book covers</string>
    <string name="hello_world">Hello World</string>
    <string name="action_settings">action_settings</string>
    <string name="title_settings">Settings</string>
    <string name="comic_companies">Comic Company</string>
    <string name="comic_company_summary">Which comic company to pull covers from</string>
    <string name="refresh_interval">Refresh interval</string>
    <string name="refresh_interval_summary">How frequently to update the image</string>
    <string name="download_on_wifi">Only download images on wifi</string>
</resources>
