<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory>
            
        <ListPreference
                android:key="company_preference"
                android:title="@string/comic_companies"
                android:summary="@string/comic_company_summary"
                android:entries="@array/comicCompanies"
                android:entryValues="@array/comicCompanyValues"
                android:defaultValue="DC"
                android:dialogTitle="@string/comic_companies" />
        <ListPreference
                android:key="refresh_preference"
                android:title="@string/refresh_interval"
                android:summary="@string/refresh_interval_summary"
                android:entries="@array/refreshInterval"
                android:entryValues="@array/refreshIntervalValues"
                android:defaultValue="24"
                android:dialogTitle="@string/refresh_interval" />
        <CheckBoxPreference
                android:key="network_preference"
                android:defaultValue="true"
                android:title="@string/download_on_wifi"/>

    </PreferenceCategory>

</PreferenceScreen>